@@ -1,36 +1,25 @@
 package com.flipfit.business.impl;
 
 import com.flipfit.bean.*;
+import com.flipfit.business.FlipfitCustomerService;
 import com.flipfit.dao.*;
 import com.flipfit.dao.impl.*;
-import com.flipfit.business.FlipfitCustomerService;
+
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Scanner;
 
 public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
-    private FlipfitCustomerDAO customerDAO;
-    private FlipfitGymCenterDAO gymCenterDAO;
-    private FlipfitSlotDAO slotDAO;
-    private FlipfitBookingDAO bookingDAO;
-
-    public FlipfitCustomerServiceImpl() {
-        this.customerDAO = new FlipfitCustomerDAOImpl();
-        this.gymCenterDAO = new FlipfitGymCenterDAOImpl();
-        this.slotDAO = new FlipfitSlotDAOImpl();
-        this.bookingDAO = new FlipfitBookingDAOImpl();
-    }
+    private final FlipfitCardDAO cardDAO = new FlipfitCardDAOImpl();
+    private final FlipfitCustomerDAO customerDAO = new FlipfitCustomerDAOImpl();
+    private final FlipfitGymCenterDAO gymCenterDAO = new FlipfitGymCenterDAOImpl();
+    private final FlipfitSlotDAO slotDAO = new FlipfitSlotDAOImpl();
+    private final FlipfitBookingDAO bookingDAO = new FlipfitBookingDAOImpl();
+    private static final double SLOT_BOOKING_AMOUNT = 500.0;
 
     @Override
     public boolean registerCustomer(FlipfitCustomer customer) {
-        if (customer == null || customer.getEmail() == null || customer.getPassword() == null) {
-            return false;
-        }
-
-        // Check if email already exists
-        if (customerDAO.getCustomerByEmail(customer.getEmail()) != null) {
-            return false;
-        }
-
         return customerDAO.addCustomer(customer);
     }
 
@@ -60,69 +49,82 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
 
     @Override
     public FlipfitBooking bookSlot(int customerId, int slotId, LocalDate bookingDate) {
+        List<FlipfitCard> cards = cardDAO.getCustomerCards(customerId);
+        if (cards.isEmpty()) {
+            System.out.println("No payment methods found. Please add a card first.");
+            return null;
+        }
+
+        // Get slot information to fetch center ID
         FlipfitSlot slot = slotDAO.getSlotById(slotId);
-        if (slot == null || !slot.isAvailable()) {
-            return null;
-        }
-        // check if booking date is in the future
-        if (bookingDate.isBefore(LocalDate.now())) {
-            return null;
-        }
-        // check if user already have booking for this slot on the same day if yes return null
-        List<FlipfitBooking> existingBookings = bookingDAO.getBookingsByCustomerId(customerId
-                ).stream()
-                .filter(booking -> booking.getSlotId() == slotId && booking.getBookingDate().equals(bookingDate))
-                .toList();
-
-        if (!existingBookings.isEmpty()) {
-            return null;
-        }
-        // check if slot have same day as booking date
-        if (!slot.getDay().equalsIgnoreCase(bookingDate.getDayOfWeek().name())) {
+        if (slot == null) {
+            System.out.println("Invalid slot selected.");
             return null;
         }
 
-        FlipfitCustomer customer = customerDAO.getCustomerById(customerId);
-        if (customer == null) {
+        // Display available cards
+        System.out.println("\nSelect a card for payment:");
+        for (FlipfitCard card : cards) {
+            System.out.println(card.getCardId() + ". Card ending in " +
+                card.getCardNumber().substring(card.getCardNumber().length() - 4));
+        }
+
+        Scanner scanner = new Scanner(System.in);
+        System.out.print("Enter card ID to use for payment: ");
+        int selectedCardId = scanner.nextInt();
+
+        // Validate selected card
+        boolean cardFound = false;
+        for (FlipfitCard card : cards) {
+            if (card.getCardId() == selectedCardId) {
+                cardFound = true;
+                break;
+            }
+        }
+
+        if (!cardFound) {
+            System.out.println("Invalid card selected.");
             return null;
         }
 
-        // Create booking
-        FlipfitBooking booking = new FlipfitBooking(0, customerId, slotId, slot.getCenterId(), bookingDate, slot.getPrice());
+        // Create booking with payment
+        FlipfitBooking booking = new FlipfitBooking();
+        booking.setCustomerId(customerId);
+        booking.setSlotId(slotId);
+        booking.setCenterId(slot.getCenterId()); // Set the center ID from slot
+        booking.setBookingDate(bookingDate);
+        booking.setAmount(SLOT_BOOKING_AMOUNT);
+        booking.setStatus(FlipfitBooking.BookingStatus.CONFIRMED); // Set initial status
+        booking.setBookingTime(LocalDateTime.now());
+
+        System.out.println("\nConfirm payment of ₹" + SLOT_BOOKING_AMOUNT);
+        System.out.print("Enter 1 to confirm payment, 0 to cancel: ");
+        int confirm = scanner.nextInt();
+
+        if (confirm != 1) {
+            System.out.println("Payment cancelled.");
+            return null;
+        }
 
         if (bookingDAO.addBooking(booking)) {
             // Update slot availability
-            slot.setAvailableSeats(slot.getAvailableSeats() - 1);
-            slotDAO.updateSlot(slot);
+            int newAvailableSeats = slot.getAvailableSeats() - 1;
+            slotDAO.updateSlotAvailability(slotId, newAvailableSeats);
+            System.out.println("Payment successful!");
             return booking;
+        } else {
+            System.out.println("Booking failed. Please try again.");
+            return null;
         }
-
-        return null;
     }
 
     @Override
     public boolean cancelBooking(int bookingId, int customerId) {
         FlipfitBooking booking = bookingDAO.getBookingById(bookingId);
-        if (booking == null || booking.getCustomerId() != customerId) {
-            return false;
+        if (booking != null && booking.getCustomerId() == customerId) {
+            return bookingDAO.cancelBooking(bookingId);
         }
-
-        if (booking.getStatus() == FlipfitBooking.BookingStatus.CANCELLED) {
-            return false;
-        }
-
-        // Cancel booking
-        booking.setStatus(FlipfitBooking.BookingStatus.CANCELLED);
-        bookingDAO.updateBooking(booking);
-
-        // Increase slot availability
-        FlipfitSlot slot = slotDAO.getSlotById(booking.getSlotId());
-        if (slot != null) {
-            slot.setAvailableSeats(slot.getAvailableSeats() + 1);
-            slotDAO.updateSlot(slot);
-        }
-
-        return true;
+        return false;
     }
 
     @Override
@@ -133,8 +135,8 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
     @Override
     public List<FlipfitBooking> viewBookingsByDate(int customerId, LocalDate date) {
         return bookingDAO.getBookingsByCustomerId(customerId).stream()
-                .filter(booking -> booking.getBookingDate().equals(date))
-                .collect(java.util.stream.Collectors.toList());
+            .filter(booking -> booking.getBookingDate().equals(date))
+            .toList();
     }
 
     @Override
@@ -145,5 +147,25 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
     @Override
     public boolean updateCustomerProfile(FlipfitCustomer customer) {
         return customerDAO.updateCustomer(customer);
+    }
+
+    @Override
+    public boolean addCard(FlipfitCard card) {
+        return cardDAO.addCard(card);
+    }
+
+    @Override
+    public boolean removeCard(int cardId, int customerId) {
+        return cardDAO.removeCard(cardId, customerId);
+    }
+
+    @Override
+    public boolean updateCard(FlipfitCard card) {
+        return cardDAO.updateCard(card);
+    }
+
+    @Override
+    public List<FlipfitCard> getCustomerCards(int customerId) {
+        return cardDAO.getCustomerCards(customerId);
     }
 }
